# cpp-epoll-tcp-server

./: .gitignore  CMakeLists.txt  README.md
docs/: v4.1-ai-fixes-careful-3-7-12-13-14.md  v4.1-ai-fixes-safe-2-6-9-15.md
include/: Connection.hpp  Logger.hpp
include/business/: Handlers.hpp  StatsManager.hpp
include/common/: Logger.hpp
include/concurrent/: BlockQueue.hpp
include/net/: Connection.hpp  TcpServer.hpp
include/protocol/: MessageType.hpp  ProtocolCodec.hpp  Request.hpp  Response.hpp
scripts/: stress_test.py  test_client.py  test_client1.py  test_client2.py
src/: main.cpp  server_tcp.cpp
src/business/: Dispatcher.cpp  Handlers.cpp  LogStorage.cpp  StatsManager.cpp
src/net/: TcpServer.cpp
src/protocol/: ProtocolCodec.cpp
tests/: stress_test.py  test_client.py
